@startuml
    interface JpaRepository<T, ID> extends JavaInterface

    interface AdminRepository extends JpaRepository<Admin, Integer> {
        + findByAdminID(adminID: String) : Optional<Admin>
        + findByUserName(userName: String) : Optional<Admin>
    }

    interface IngredientRepository extends JpaRepository<Ingredient, Integer> {
        + findByProductName(productName: String) : Optional<Ingredient>
    }

    interface RecipeRepository extends JpaRepository<Recipe, Integer> {
        + findByRecipeName(recipeName: String) : Optional<Recipe>
    }

    interface StaffRepository extends JpaRepository<Staff, Integer> {
        + findByStaffID(staffID: String) : Optional<Staff>
        + findByUserName(userName: String) : Optional<Staff>
    }

    interface ReportRepository extends JpaRepository<Report, Long> {
        + findByReportType(reportType: ReportType) : List<Report>
        + findByReportTypeAndTimestampBetween(reportType: ReportType, start: LocalDateTime, end: LocalDateTime) : List<Report>

        + findByDateRange(start: LocalDateTime, end: LocalDateTime) : List<Report> <<Query>>
        + getReportSummary(start: LocalDateTime, end: LocalDateTime) : List<Object[]> <<Query>>
        + getTopEntitiesByType(type: ReportType, start: LocalDateTime, end: LocalDateTime) : List<Object[]> <<Query>>
        + getTimeSeriesData(type: ReportType, start: LocalDateTime, end: LocalDateTime) : List<Object[]> <<Query>>
        + countByTypeAndDateRange(type: ReportType, start: LocalDateTime, end: LocalDateTime) : Long <<Query>>
        + findDistinctEntityNamesByType(type: ReportType) : List<String> <<Query>>
    }

    AdminRepository --|> JpaRepository
    IngredientRepository --|> JpaRepository
    RecipeRepository --|> JpaRepository
    StaffRepository --|> JpaRepository
    ReportRepository --|> JpaRepository

@enduml